# tiralab-calculator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yaml
documentation/: definition.md  implementation.md  testing.md  user-guide.md  week-1-report.md  week-2-report.md  week-3-report.md  week-4-report.md  week-5-report.md  week-6-report.md
src/: ast.rs  builtins.rs  infix_to_postfix.rs  main.rs  operators.rs  parser.rs  state.rs  tokenizer.rs  tui.rs  util.rs
