[package]
name = "tiralab-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bevy_utils = "0.8.1"
bstr = "1.0.1"
thiserror = "1.0.37"
flexstr = "0.9.2"
rug = "1.17.0"
rustyline = { git = "https://github.com/kbjakex/rustyline" }
rustyline-derive = "0.7.0"